samples/_failures_safe/1761002047_ae90e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_164828b8.c: In function ‘print_token’:
./samples/SAFE/__tmp_164828b8.c:170:9: error: expected expression at end of input
  170 |         "NUMBER", "IDENTIFIER", "OPERATOR",
      |         ^~~~~~~~
./samples/SAFE/__tmp_164828b8.c:170:9: error: expected declaration or statement at end of input
